# C_language

./: README.md
00_piscine_reloaded/ex00/: exo.tar
00_piscine_reloaded/ex03/: find_sh.sh
00_piscine_reloaded/ex09/: ft_ft.c
01_libft/: .libft.h.swp  Makefile  ft_get_word_len.c  ft_get_word_number.c  ft_is_whitespace.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstiter.c  ft_lstmap.c  ft_memalloc.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strnew.c  (+7 more)
02_get_next_line/: Makefile  get_next_line  get_next_line.c  get_next_line.h  main.c
03_fillit/: Makefile  addone.c  addtwo.c  author  board.c  fillit.c  fillit.h  funcs.c  listfunc.c  main.c  reading.c  solving.c  validation.c
05_printf/: Makefile
06_pushswap/: Makefile  push_swap.h
07_lemin/: Makefile  author  lem-in
07_lemin/map/: CMakeLists.txt  FR  JJ  aa  big-super-pos_infinity  count  dd  flow  lo  my  palan  palan1  print_lst  prosto-big  rr  se  ship  sub  ten  ten_test  test3  test_big  test_gen  test_min  tets_map  tri  trio
07_lemin/map/graphic/: Makefile  lem-in
07_lemin/map/graphic/include/: lem_in.h
07_lemin/map/graphic/src/: ft_struct.c  func_for_val.c  func_for_val_p2.c  main.c  scan_param.c  step_2.c  step_3.c  val_param.c  visualisation.c
(+375 files in other folders)
